# hrx-hs

./: .ghci  .gitmodules  CHANGELOG.md  LICENSE  README.md  hrx-hs.cabal  hrx.cabal  stack.yaml  test.hrx
.github/workflows/: pipeline.yml
lib/: HRX.hs
lib/Codec/Archive/: HRX.hs
lib/Codec/Archive/HRX/: Internal.hs  Parser.hs
lib/HRX/: Internal.hs  Parser.hs
test/: TestUtils.hs  doctests.hs
test/Codec/Archive/HRX/: ArchiveSpec.hs  ExamplesSpec.hs  HRXSpec.hs  ParserSpec.hs  ParsersSpec.hs
test/HRX/: ArchiveSpec.hs  ExamplesSpec.hs  HRXSpec.hs  ParserSpec.hs  ParsersSpec.hs  TestUtils.hs
