cabal-version:      2.4
name:               hrx
version:            0.1.0
tested-with:        GHC ==8.10.2
synopsis:           A Haskell implementation of Google's HRX archive format
description:        A Haskell implementation of Google's HRX archive format
homepage:           https://github.com/sondr3/hrx-hs
bug-reports:        https://github.com/sondr3/hrx-hs/issues
license:            (MIT OR Apache-2.0)
license-file:       LICENSE LICENSE_APACHE
author:             Sondre Nilsen
maintainer:         nilsen.sondre@gmail.com
build-type:         Simple
category:           Text
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/sondr3/hrx-hs.git

common config
  build-depends:      base ^>=4.14.1.0
  default-language:   Haskell2010  
  default-extensions: NamedFieldPuns
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

  build-depends:
    , megaparsec  ^>=9.0.1
    , text        ^>=1.2.3.2

flag dev
  description: Turn on development settings.
  default:     False
  manual:      True

library
  import:          config
  exposed-modules: HRX
  other-modules:   HRX.Parser
  build-depends:
    , containers  ^>=0.6.2.1
    , mtl         ^>=2.2.2

  hs-source-dirs:  lib

  if flag(dev)
    ghc-options: -O0 -Wall -Werror

  else
    ghc-options: -O2 -Wall

  if flag(dev)
    ghc-options:
      -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
      -Wnoncanonical-monad-instances

test-suite hrx-hs-test
  import:             config
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:      HRX.TestUtils
  default-extensions: OverloadedStrings
  build-tool-depends: hspec-discover:hspec-discover ^>=2.7.4
  build-depends:
    , hrx
    , hspec             ^>=2.7.4
    , hspec-megaparsec  ^>=2.2.0

  other-modules:      HRX.HRXSpec
