cabal-version:      2.4
name:               hrx
version:            0.1.0
tested-with:        GHC ==8.10.2
synopsis:           A Haskell implementation of Google's HRX archive format
description:        A Haskell implementation of Google's HRX archive format
homepage:           https://github.com/sondr3/hrx-hs
bug-reports:        https://github.com/sondr3/hrx-hs/issues
license:            (MIT OR Apache-2.0)
license-file:       LICENSE LICENSE_APACHE
author:             Sondre Nilsen
maintainer:         nilsen.sondre@gmail.com
build-type:         Simple
category:           Text
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/sondr3/hrx-hs.git

common config
  default-language:   Haskell2010  
  default-extensions: 
    NamedFieldPuns
    OverloadedStrings
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

  build-depends:
    , base        ^>=4.14.1.0
    , directory   ^>=1.3.6.1
    , filepath    ^>=1.4.2.1
    , megaparsec  ^>=9.0.1
    , mtl         ^>=2.2.2
    , text        ^>=1.2.3.2

common library
  build-depends: containers ^>=0.6.2.1

  if flag(dev)
    ghc-options: -O0 -Wall -Werror

  else
    ghc-options: -O2 -Wall

  if flag(dev)
    ghc-options:
      -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
      -Wnoncanonical-monad-instances

flag dev
  description: Turn on development settings.
  default:     False
  manual:      True

library hrx-internal
  import:          config, library
  other-modules:   HRX.Parser
  exposed-modules: HRX.Internal
  hs-source-dirs:  lib

library
  import:          config, library
  exposed-modules: HRX
  other-modules:
    HRX.Internal
    HRX.Parser

  build-depends:   hrx-internal
  hs-source-dirs:  lib

test-suite hrx-hs-test
  import:             config
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:
    HRX.ExamplesSpec
    HRX.ParserSpec
    HRX.ParsersSpec
    HRX.TestUtils

  default-extensions: OverloadedStrings
  build-tool-depends: hspec-discover:hspec-discover ^>=2.7.4
  build-depends:
    , hrx-internal
    , hspec             ^>=2.7.4
    , hspec-megaparsec  ^>=2.2.0

  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
